<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/ToolbarTheme" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar" />

        <TextView
            android:id="@+id/text_front"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:text="あなたの「知ってる」は、"
            android:textColor="@color/blue_logo"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="誰かの「知りたい」"
            android:textColor="@color/orange_logo"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/text_front"
            app:layout_constraintTop_toBottomOf="@id/text_front" />

        <EditText
            android:id="@+id/edt_register_first_name"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_stroke_edittext"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:maxLength="10"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_end" />

        <EditText
            android:id="@+id/edt_register_last_name"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_stroke_edittext"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:maxLength="10"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@id/edt_register_first_name"
            app:layout_constraintTop_toBottomOf="@id/edt_register_first_name" />

        <EditText
            android:id="@+id/edt_register_nickname"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_stroke_edittext"
            android:hint="@string/nickname"
            android:inputType="text"
            android:maxLength="10"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@id/edt_register_first_name"
            app:layout_constraintTop_toBottomOf="@id/edt_register_last_name" />

        <EditText
            android:id="@+id/edt_register_email"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_stroke_edittext"
            android:hint="@string/mail_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@id/edt_register_first_name"
            app:layout_constraintTop_toBottomOf="@id/edt_register_nickname" />

        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_stroke_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@id/edt_register_first_name"
            app:layout_constraintTop_toBottomOf="@id/edt_register_email" />

        <EditText
            android:id="@+id/edt_register_re_password"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_stroke_edittext"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@id/edt_register_first_name"
            app:layout_constraintTop_toBottomOf="@id/edt_register_password" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/gray"
            android:enabled="false"
            android:text="@string/accept_register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@id/edt_register_first_name"
            app:layout_constraintTop_toBottomOf="@id/edt_register_re_password" />

        <TextView
            android:id="@+id/tv_term_of_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/term_of_use"
            android:textColor="@color/blue_logo"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@id/edt_register_first_name"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>